# choropleth

./: README.md  germany.py  plotly_example.py  prepare_data.py  pyproject.toml
data/: plz_to_kreis.json
flask_plotly/: app.py
flask_plotly/templates/: index.html
old/: chorodata.py  dusseldorf.py
