[tool.poetry]
name = "choropleth"
version = "0.1.0"
description = ""
authors = ["Ulrich Janus <ulrichjanus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^4.7.1"
pandas = "^1.0.3"
flask = "^1.1.2"
shapely = "^1.7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
